kubernetes/apps/default/teslamate/app/teslamate.yaml
---

apiVersion: v1
kind: Service
metadata:
  name: teslamate
  namespace: default
spec:
  ports:
    - protocol: TCP
      port: 4000
  selector:
    app: teslamate
  type: ClusterIP

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: teslamate
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    hajimari.io/enable: "true"
    nginx.org/websocket-services: teslamate
spec:
  ingressClassName: "nginx"
  rules:
    - host: teslamate.j-burg11.dev
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: teslamate
                port:
                  number: 4000
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: teslamate
  namespace: default
  labels:
    app: teslamate
spec:
  replicas: 1
  selector:
    matchLabels:
      app: teslamate
  template:
    metadata:
      labels:
        app: teslamate
    spec:
      containers:
        - name: teslamate
          image: teslamate/teslamate:latest
